--- a/startup/css/style.css
+++ b/startup/css/style.css
@@ -89,3 +89,22 @@ header > input:focus {
 #facebook {
     margin: 0px 0px 0px 1260px;
 }
+
+nav {
+    font-family: 'Hind Madurai', sans-serif;
+    height: 53px;
+    background-color: #D9D9D9;
+    padding: 15px;
+}
+
+nav > a {
+    text-decoration: none;
+    color: black;
+    padding: 0px;
+    margin: 0px 0px 0px 60px;
+}
+
+nav > a:hover {
+    text-decoration: underline;
+    color: black;
+}
