--- a/startup/css/style.css
+++ b/startup/css/style.css
@@ -17,18 +17,18 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 header {
-    height: 112px;
+    min-height: 112px;
     background-color: var(--cor1);
 }
 
 img#logo {
-    margin: 0px 0px 0px 125px;
-    padding: 5px 0px 0px 0px;
+    margin-left: 5%;
+    padding-top: 5px;
     cursor: default;
 }
 
@@ -39,22 +39,22 @@ header > i {
 }
 
 i#register {
-    margin: 20px 0px 0px 977px;
+    margin: 2% 0px 0px 63%;
 }
 
 i#location {
-    margin: 70px 0px 0px 977px;
+    margin: 5% 0px 0px 63%;
 }
 
 header > span {
     position: absolute;
     color: var(--cor2);
-    margin: 10px 0px 0px 1000px;
+    margin: 1% 0px 0px 65%;
     font-size: var(--fonte-pequena);
 }
 
 #titulo {
-    margin: 35px 0px 0px 15px;
+    margin: 3% 0px 0px 0%;
     font-size: var(--fonte-grande);
 }
 
@@ -62,11 +62,11 @@ header > span > span {
     display: block;
     position: absolute;
     width: 84px;
-    margin: -5px 0px 0px 0px;
+    
 }
 
 i#down {
-    margin: 28px 0px 0px 1083px;
+    margin: 2.3% 0px 0px 70.5%;
 }
 
 header > i:hover > div {
@@ -77,7 +77,7 @@ header > i > div {
     display: none;
     background-color: var(--cor3);
     position: absolute;
-    margin: -15px 0px 0px 0px;
+    margin-top: -70%;
     width: 72px;
     height: 29px;
 }
@@ -98,7 +98,6 @@ header > i > div {
 #people {
     background-color: var(--cor3);
     position: absolute;
-    
     width: 51px;
     height: 38px;
 }
@@ -115,12 +114,12 @@ header > i > div {
 }
 
 #cep {
-    margin: 70px 0px 0px 1000px;
+    margin: 4.5% 0px 0px 65%;
 }
 
 header > input {
     position: absolute;
-    margin: 42px 0px 0px 183px;
+    margin: 3% 0px 0px 11%;
     width: 50%;
     height: 35px;
     border-radius: 10px;
@@ -131,27 +130,27 @@ header > input:focus {
 }
 
 #search {
-    margin: 54px 0px 0px 922px;
+    margin: 4% 0px 0px 59%;
 }
 
 #heart {
-    margin: 80px 0px 0px 80%;
+    margin: 6% 0px 0px 84%;
 }
 
 #basket {
-    margin: 80px 0px 0px 82%;
+    margin: 6% 0px 0px 85.8%;
 }
 
 #contato {
-    margin: 0px 0px 0px 1170px;
+    margin: 0% 0px 0px 79%;
 }
 
 #instagram {
-    margin: 0px 0px 0px 1250px;
+    margin: 0.5% 0px 0px 84%;
 }
 
 #facebook {
-    margin: 0px 0px 0px 1270px;
+    margin: 0.5% 0px 0px 85.5%;
 }
 
 nav {
@@ -164,7 +163,7 @@ nav > a {
     text-decoration: none;
     color: black;
     padding: 0px;
-    margin: 0px 0px 0px 60px;
+    margin-left: 4%;
 }
 
 nav > a:hover {
@@ -178,6 +177,6 @@ nav > i {
 }
 
 #categoria {
-    margin: 5px 0px 0px 0px;
+    
     color: black;
 }
