--- a/startup/tela-login/style.css
+++ b/startup/tela-login/style.css
@@ -6,9 +6,13 @@
     --fonte-principal: 'Hind Madurai', sans-serif;
     --fonte-grande: 2em;
 
-    --cor1: #C1A866;
-    --cor2: #3C0909;
-    --cor3: #D9D9D9;
+    --cor1: #8A1515;
+    --cor2: #572727;
+    --cor3: #3C0909;
+    --cor4: #8A3E3E;
+    --cor5: #D62020;
+    --cor6: #C1A866;
+    --cor7: #3D3D0F;
 }
 
 * {
@@ -18,6 +22,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    background-image: linear-gradient(to left, var(--cor3), var(--cor2));
 }
 
 main {
@@ -25,12 +30,18 @@ main {
     max-height: 500px;
     margin: auto;
     padding: 10px;
-    margin-top: 200px;
+    margin-top: 130px;
+}
+
+main header {
+    text-align: center;
+    background-color: var(--cor4);
 }
 
 form {
     text-align: center;
-    
+    background-color: var(--cor2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 form > div {
@@ -39,16 +50,36 @@ form > div {
     font-weight: bold;
 }
 
+form label {
+    color: var(--cor4);
+}
+
 form input {
     width: 90%;
 }
 
-form button {
-    font-weight: bold;
+input.btn {
+    background-color: var(--cor4);
+    color: var(--cor2);
+    border: none;
+    border: 10px;
+}
+
+input.btn:hover {
+    background-color: var(--cor3);
+    color: var(--cor4);
+}
+
+form > span {
+    color: var(--cor5);
 }
 
 form a {
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: var(--cor3);    
+}
+
+form a:hover {
+    color: var(--cor5);
 }
