--- a/startup/tela-cadastro/style.css
+++ b/startup/tela-cadastro/style.css
@@ -6,9 +6,11 @@
     --fonte-principal: 'Hind Madurai', sans-serif;
     --fonte-grande: 2em;
 
-    --cor1: #C1A866;
-    --cor2: #3C0909;
-    --cor3: #D9D9D9;
+    --cor1: #3C0909;
+    --cor2: #c1a866;
+    --cor3: #d9d9d9;
+    --cor4: #66666e;
+    --cor5: #80727b;
 }
 
 * {
@@ -18,19 +20,26 @@
 body {
     margin: 0px;
     padding: 0px;
+    background-image: linear-gradient(to right, var(--cor1), var(--cor4));
 }
 
 main {
     max-width: 500px;
-    max-height: 550px;
+    max-height: 640px;
     margin: auto;
     padding: 10px;
-    margin-top: 140px;
+    margin-top: 50px;
+}
+
+main header {
+    text-align: center;
+    background-color: var(--cor2);
 }
 
 form {
     text-align: center;
-    
+    background-color: var(--cor3);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 form > div {
@@ -43,12 +52,28 @@ form input {
     width: 90%;
 }
 
-form button {
+input.btn {
+    background-color: var(--cor5);
+    border: none;
+    border-radius: 10px;
     font-weight: bold;
 }
 
-form a {
-    text-decoration: none;
+input.btn:hover {
+    background-color: var(--cor2);
+    color: var(--cor1);
+}    
+
+a.btn {
+    background-color: var(--cor5);
+    margin-bottom: 10px;
+    width: 90%;
+    border: none;
+    border-radius: 10px;
     font-weight: bold;
-    color: black;
+}
+
+a.btn:hover {
+    background-color: var(--cor2);
+    color: var(--cor1);
 }
