--- a/startup/css/style.css
+++ b/startup/css/style.css
@@ -140,6 +140,7 @@ nav {
     text-align: center;
     font-weight: bold;
     background-color: var(--cor3);
+    padding-top: 15px;
 }
 
 .menu a {
