--- a/startup/css/style.css
+++ b/startup/css/style.css
@@ -6,9 +6,11 @@
     --fonte-principal: 'Hind Madurai', sans-serif;
     --fonte-grande: 2em;
 
-    --cor1: #C1A866;
-    --cor2: #3C0909;
-    --cor3: #D9D9D9;
+    --cor1: #3C0909;
+    --cor2: #c1a866;
+    --cor3: #d9d9d9;
+    --cor4: #66666e;
+    --cor5: #80727b;
 }
 
 * {
@@ -25,12 +27,12 @@ header {
 }
 
 .cabecalho {
+    background: var(--cor2);
     min-height: 112px;
     position: relative;
     text-align: center;
-    color: var(--cor2);
+    color: var(--cor1);
     font-weight: bold;
-    background: var(--cor1);
 }
 
 #titulo {
@@ -41,6 +43,7 @@ header {
     margin-top: 5px;
     height: 35px;
     width: 100%;
+    border: none;
     border-radius: 10px;
 }
 
@@ -67,7 +70,7 @@ header {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: var(--cor1);
+    background-color: var(--cor2);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -78,7 +81,7 @@ header {
 
 .dropdown-content > a {
     text-decoration: none;
-    color: var(--cor2);
+    color: var(--cor1);
 }
 
 .dropdown2{
@@ -87,13 +90,13 @@ header {
 
 .dropdown2 > a {
     text-decoration: none;
-    color: var(--cor2);
+    color: var(--cor1);
 }
 
 .sub-dropdown-content {
     display: none;
     position: absolute;
-    background-color: var(--cor1);
+    background-color: var(--cor2);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     min-width: 64px;
     z-index: 1;
@@ -108,7 +111,7 @@ header {
 .sub-dropdown-content > a {
     display: block;
     text-decoration: none;
-    color: var(--cor2);
+    color: var(--cor1);
 }
 
 #contatos {
@@ -136,10 +139,10 @@ nav {
 }
 
 .menu {
+    background-color: var(--cor3);
     min-height: 53px;
     text-align: center;
     font-weight: bold;
-    background-color: var(--cor3);
     padding-top: 15px;
 }
 
@@ -151,7 +154,7 @@ nav {
 .dropdown-content2 {
     display: none;
     position: absolute;
-    background-color: var(--cor1);
+    background-color: var(--cor2);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     min-width: 229px;
     z-index: 1;
@@ -164,7 +167,7 @@ nav {
 .dropdown-content2 > a {
     display: block;
     text-decoration: none;
-    color: var(--cor2);
+    color: var(--cor1);
 }
 
 /* Estilos específicos para telas menores que 600px */
